2000-08-14  Jonathan Larmour  <jlarmour@redhat.co.uk>

	From Fabrice Gautier:
	* src/hal_misc.c (hal_zero_bss): Use __bss_end not _end
	* src/i386.ld: Add __bss_end symbol to end of SECTION_bss

2000-06-21  Nick Garnett  <nickg@cygnus.co.uk>

	* src/i386_stub.c: Removed use of CYG_LABEL_NAME() and added
	underscore to _breakinst.

	* src/i386.ld: Switched to new table definition mechanism.

	* include/basetype.h: Removed definition of CYG_LABEL_NAME().

2000-06-08  Jesper Skov  <jskov@redhat.com>

	* include/hal_arch.h (CYGARC_HAL_SAVE_GP, CYGARC_HAL_RESTORE_GP):
	Added.

2000-03-27  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* include/basetype.h: Let cyg_halbool revert to the system default
	(i.e. a word)

2000-03-24  Jesper Skov  <jskov@redhat.com>

	* include/basetype.h: Define bool type since it's only 8 bits.
	(cyg_halbool): always unsigned char.

2000-03-02  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* src/hal_misc.c (cyg_hal_exception_handler): Comment out since
	it's unimplemented

2000-02-16  Jesper Skov  <jskov@redhat.com>

	* src/i386_stub.c: CYG_HAL_I386 -> CYGPKG_HAL_I386

2000-02-16  Jesper Skov  <jskov@redhat.com>

	* cdl/hal_i386.cdl: remove fix mes.

2000-02-10  Nick Garnett  <nickg@cygnus.co.uk>

	* include/hal_arch.h: Merged PC platform support changes
	contributed by Patrick O'Grady (pjo)(patrick@softprocess.com).

	* include/hal_intr.h: Moved Linux specific support out to its own
	var_intr.h.

	* src/context.S: Added FP switch code from pjo, suitably
	protected.

	* src/PKGconf.mak: Added i386_stub.c to COMPILE list.

	* cdl/hal_i386.cdl: Added i386_stub.c to compile list.

	* src/i386_stub.c:
	* include/arch.inc: Files added.

	* src/hal_misc.c: Added hal_zero_bss().

	* src/vectors.S: Added PC support code.

2000-01-28  Gary Thomas  <gthomas@cygnus.co.uk>

	* src/i386.ld: Add support for network package.

2000-01-21  Jesper Skov  <jskov@cygnus.co.uk>

	* include/hal_intr.h (HAL_INTERRUPT_MASK, HAL_INTERRUPT_UNMASK): 
	Define.
